--- a/views/question.ejs
+++ b/views/question.ejs
@@ -10,19 +10,27 @@
    </head>
    <body>
       <div class="container">
-         <h3>Ask a question</h3>
-         <hr>
-         <form>
-            <label>Title</label>
-            <input type="text" placeholder="Title" class="form-control" />
-            <br /><label>Question</label>
-            <textarea
-               placeholder="Ask your question here"
-               class="form-control"
-            ></textarea>
-            <br />
-            <button class="btn btn-success">Ask now</button>
-         </form>
+         <div class="card">
+
+            <div class="card-header">
+               <h3>Ask a question</h3>
+            </div>
+
+            <div class="card-body">
+               <form>
+                  <label>Title</label>
+                  <input type="text" placeholder="Title" class="form-control" />
+                  <br /><label>Question</label>
+                  <textarea
+                     placeholder="Ask your question here"
+                     class="form-control"
+                  ></textarea>
+                  <br />
+                  <button class="btn btn-success">Ask now</button>
+               </form>
+            </div>
+            
+         </div>
       </div>
    </body>
    <script
