Add styles to question form

--- a/views/question.ejs
+++ b/views/question.ejs
@@ -5,13 +5,18 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Questions & Answers</title>
-      <link rel="stylesheet" href="/css/style.css" />
       <link rel="stylesheet" href="/css/bootstrap.min.css" />
+      <link rel="stylesheet" href="/css/style.css" />
    </head>
    <body>
+      <nav class="navbar navbar-dark bg-dark">
+          <a class="navbar-brand" href="/">
+            <img src="/img/home.png" alt="">
+          </a>
+      </nav>
+      
       <div class="container">
-         <div class="card">
-
+         <div class="card" id="question-form">
             <div class="card-header">
                <h3>Ask a question</h3>
             </div>
@@ -29,7 +34,6 @@
                   <button class="btn btn-success">Ask now</button>
                </form>
             </div>
-            
          </div>
       </div>
    </body>
