--- a/views/question.ejs
+++ b/views/question.ejs
@@ -1,51 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Questions & Answers</title>
-      <link rel="stylesheet" href="/css/bootstrap.min.css" />
-      <link rel="stylesheet" href="/css/style.css" />
-   </head>
-   <body>
-      <nav class="navbar navbar-dark bg-dark">
-          <a class="navbar-brand" href="/">
-            <img src="/img/home.png" alt="">
-          </a>
-      </nav>
-      
-      <div class="container">
-         <div class="card" id="question-form">
-            <div class="card-header">
-               <h3>Ask a question</h3>
-            </div>
-
-            <div class="card-body">
-               <form>
-                  <label>Title</label>
-                  <input type="text" placeholder="Title" class="form-control" />
-                  <br /><label>Question</label>
-                  <textarea
-                     placeholder="Ask your question here"
-                     class="form-control"
-                  ></textarea>
-                  <br />
-                  <button class="btn btn-success">Ask now</button>
-               </form>
-            </div>
+<%- include('./partials/header.ejs') %>
+<body>
+   <%- include('./partials/navbar.ejs') %>
+   <div class="container">
+      <div class="card" id="question-form">
+         <div class="card-header">
+            <h3>Ask a question</h3>
+         </div>
+         <div class="card-body">
+            <form>
+               <label>Title</label>
+               <input type="text" placeholder="Title" class="form-control" />
+               <br /><label>Question</label>
+               <textarea
+                  placeholder="Ask your question here"
+                  class="form-control"
+               ></textarea>
+               <br />
+               <button class="btn btn-success">Ask now</button>
+            </form>
          </div>
       </div>
-   </body>
-   <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-   ></script>
-   <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
-      integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
-      crossorigin="anonymous"
-   ></script>
-   <script src="/js/bootstrap.min.js"></script>
-</html>
+   </div>
+</body>
+<%- include('./partials/footer.ejs') %>
