--- a/views/question.ejs
+++ b/views/question.ejs
@@ -6,14 +6,22 @@
          <div class="card-header">
             <h3>Ask a question</h3>
          </div>
+
          <div class="card-body">
-            <form>
+            <form method="POST" action="/savequestion">
                <label>Title</label>
-               <input type="text" placeholder="Title" class="form-control" />
+               <input
+                  name="title"
+                  type="text"
+                  placeholder="Title"
+                  class="form-control"
+                  value="Install node on Ubuntu"
+               />
                <br /><label>Question</label>
                <textarea
+                  name="question"
                   placeholder="Ask your question here"
-                  class="form-control"
+                  class="form-control"                  
                ></textarea>
                <br />
                <button class="btn btn-success">Ask now</button>
