--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,26 @@
 <%- include('./partials/header.ejs') %>
-   <body>
-      <%- include('./partials/navbar.ejs') %>
-   </body>
+<body>
+   <%- include('./partials/navbar.ejs') %>
+
+   <div class="container">
+      <hr />
+      <h1>Questions</h1>
+      <hr />
+      <a href="/question" class="btn btn-success">Ask a question</a>
+      <hr />
+
+      <% questions.forEach(question => { %>
+      <br />
+      <div class="card">
+         <div class="card-body">
+            <h3><%= question.title %></h3>
+         </div>
+         <div class="card-footer">
+            <button class="btn btn-success">Answer</button>
+         </div>
+      </div>
+
+      <%}) %>
+   </div>
+</body>
 <%- include('./partials/footer.ejs') %>
