--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
             <h3><%= question.title %></h3>
          </div>
          <div class="card-footer">
-            <button class="btn btn-success">Answer</button>
+           <a href="/question/<%= question.id %>"> <button class="btn btn-success">Answer</button></a>
          </div>
       </div>
 
