Add answering service

--- a/views/questionPage.ejs
+++ b/views/questionPage.ejs
@@ -7,7 +7,7 @@
       <h1><%= question.title %></h1>
       <p><%= question.question %></p>
       <hr />
-      <form>
+      <form method="POST" action="/saveanswer">
          <h3>Answer</h3>
          <!-- <label>Answer</label> -->
          <textarea
