--- a/views/questionPage.ejs
+++ b/views/questionPage.ejs
@@ -19,6 +19,18 @@
          <input type="hidden" name="question" value="<%= question.id %>" />
          <button type="submit" class="btn btn-success">Answer</button>
       </form>
+      <hr />
+      <h3>Answers</h3>
+      <hr />
+      <% answers.forEach(answer => { %>
+      <br />
+      <div class="card">
+         <div class="card-body">
+            <p><%= answer.body %></p>
+         </div>
+      </div>
+
+      <%}) %>
    </div>
 </body>
 <%- include('./partials/footer.ejs') %>
